added functionality and tests to create timeseries features

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,186 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def return_n(n):\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    >>> return_n(10)\n",
-    "    10\n",
-    "    >>> return_n(100)\n",
-    "    101\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "return_n(10) == 11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_return_n(a, b):\n",
-    "    while a <= b:\n",
-    "        print(return_n(a) == a)\n",
-    "        assert return_n(a) == a\n",
-    "        a += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-6b55c44270dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_return_n\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-18-34b53e424c5c>\u001b[0m in \u001b[0;36mtest_return_n\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_return_n\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mreturn_n\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0ma\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "test_return_n(1, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************************************************\n",
-      "File \"__main__\", line 6, in __main__.return_n\n",
-      "Failed example:\n",
-      "    return_n(100)\n",
-      "Expected:\n",
-      "    101\n",
-      "Got:\n",
-      "    100\n",
-      "**********************************************************************\n",
-      "1 items had failures:\n",
-      "   1 of   2 in __main__.return_n\n",
-      "***Test Failed*** 1 failures.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TestResults(failed=1, attempted=2)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from doctest import testmod\n",
-    "testmod()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write a function fib that given a positive n prints the first n number of the fibonacci sequence:\n",
-    "1, 1, 2, 3, 5, 8, 13, 21, 34, 55, ...\n",
-    "\n",
-    "$a_n = a_{n - 1} + a_{n-2}$ \n",
-    "for n > 2\n",
-    "and\n",
-    "$a_1 = 1$\n",
-    "$a_2 = 1$\n",
-    "\n",
-    ">>> print_n(16) (what will it print)\n",
-    "\n",
-    "16, 8, 4, 2, 1 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_n(n):\n",
-    "    a_prev = 1\n",
-    "    a_pprev = 1\n",
-    "    counter = 1\n",
-    "    while counter <= n:\n",
-    "        if counter > 2:\n",
-    "            print(a_prev + a_pprev)\n",
-    "            \n",
-    "            temp_var = a_prev\n",
-    "            a_prev = a_prev + a_pprev\n",
-    "            a_pprev = temp_var\n",
-    "        else:\n",
-    "            print(1)\n",
-    "        counter += 1\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n",
-      "55\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_n(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +16,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "zb_stub = xsg.get_building_zone_names_stub()\n",
     "zone_bldg = xsg.get_all_buildings_zones(zb_stub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hvac_zone_lobby',\n",
+       " 'hvac_zone_main_hallway',\n",
+       " 'hvac_zone_room_a',\n",
+       " 'hvac_zone_theater_2',\n",
+       " 'hvac_zone_back_hallway',\n",
+       " 'hvac_zone_room_d',\n",
+       " 'hvac_zone_pegasus_hall',\n",
+       " 'hvac_zone_theater_1']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zone_bldg[\"avenal-movie-theatre\"]"
    ]
   },
   {
